--- a/main/res/layout/menu1.xml
+++ b/main/res/layout/menu1.xml
@@ -9,10 +9,11 @@
         android:id="@+id/button"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="28dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -20,12 +21,13 @@
         android:layout_width="268dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="108dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="목적지를 입력하세요"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -41,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <LinearLayout
         android:id="@+id/scrollView3"
         android:layout_width="333dp"
         android:layout_height="400dp"
@@ -59,50 +61,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/scrolltext1"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView1"
-                android:textSize="30px" />
-
-            <TextView
-                android:id="@+id/scrolltext2"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView2"
-                android:textSize="30px" />
-
-            <TextView
-                android:id="@+id/scrolltext3"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView3"
-                android:textSize="30px" />
-
-            <TextView
-                android:id="@+id/scrolltext4"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView4"
-                android:textSize="30px" />
-
-            <TextView
-                android:id="@+id/scrolltext5"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView5"
-                android:textSize="30px" />
-
-            <TextView
-                android:id="@+id/scrolltext6"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:text="TextView6"
-                android:textSize="30px" />
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
-    </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
