--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -11,45 +11,60 @@
         android:layout_width="137dp"
         android:layout_height="23dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="28dp"
         android:background="#FFFFFF"
-        android:text="OOO님, 반갑습니다."
-        app:layout_constraintHorizontal_bias="0.908"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="294dp"
-        android:layout_height="171dp"
-        android:layout_marginBottom="480dp"
-        android:text="경로 검색"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text="정류장 검색"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.164" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="294dp"
-        android:layout_height="171dp"
-        android:layout_marginBottom="280dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:text="저상버스 검색"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="294dp"
-        android:layout_height="171dp"
-        android:layout_marginBottom="68dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:text="승하차 알림 확인"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text="경로 검색"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.825" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
