--- a/main/res/layout/menu3.xml
+++ b/main/res/layout/menu3.xml
@@ -9,13 +9,10 @@
         android:id="@+id/textView5"
         android:layout_width="300dp"
         android:layout_height="180dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="51dp"
         android:background="#EEEEEE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.188"
@@ -54,16 +51,13 @@
         android:id="@+id/textView6"
         android:layout_width="300dp"
         android:layout_height="180dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="68dp"
         android:background="#EEEEEE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.725"
+        app:layout_constraintVertical_bias="0.66"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -100,11 +94,10 @@
         android:id="@+id/menu3button1"
         android:layout_width="130dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="45dp"
-        android:text="알림 변경"
+        android:text="목적지 변경"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.245"
+        app:layout_constraintHorizontal_bias="0.195"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.895" />
