--- a/main/res/layout/menu1.xml
+++ b/main/res/layout/menu1.xml
@@ -5,20 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="28dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.882"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="268dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
         android:ems="10"
@@ -26,7 +15,7 @@
         android:hint="정류장 이름을 입력하세요."
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintHorizontal_bias="0.40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="500dp"
         android:layout_marginEnd="16dp"
-        android:text="지도"
+        android:text="내주변 정류장"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
