--- a/main/res/layout/blind_notice.xml
+++ b/main/res/layout/blind_notice.xml
@@ -10,7 +10,9 @@
         android:id="@+id/notice_btn"
         android:layout_width="385dp"
         android:layout_height="710dp"
-        android:text="@string/title"
+        android:text="Route\nsearch\nresults"
+        android:textSize="80px"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
