--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -67,4 +67,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.825" />
 
+    <Button
+        android:id="@+id/button_api"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="API mode"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
